hphp/hack/test/typecheck/as_expression/dict2.php.exp
File "dict2.php", line 12, characters 31-34:
Wrong number of type arguments (expected 2, got 0) (Typing[4101])
  File "hackarray.hhi", line 24, characters 22-25:
  Definition is here
File "dict2.php", line 13, characters 16-34:
Invalid argument (Typing[4110])
  File "dict2.php", line 23, characters 28-30:
  Expected `int`
  File "hackarray.hhi", line 24, characters 34-41:
  But got `arraykey`
File "dict2.php", line 13, characters 31-34:
Wrong number of type arguments (expected 2, got 0) (Typing[4101])
  File "hackarray.hhi", line 24, characters 22-25:
  Definition is here
File "dict2.php", line 16, characters 16-40:
Invalid argument (Typing[4110])
  File "dict2.php", line 23, characters 28-30:
  Expected `int`
  File "hackarray.hhi", line 24, characters 34-41:
  But got `arraykey`
